Change: make malicious zip file checks a synchronous PublishCheck (#1721)
* change: make malicious zip file checks a synchronous PublishCheck if scanning is enabled and ensure that the flag potentially_malicious is correctly persisted otherwise

* rework PR to not pass an existing ExtensionProcessor for PublishChecks but rather create it on demand as its cheap, also add a unit test

* remove spurious debug statement